welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: type orange is not a member of object java.awt.Color
while(getCouleurSol():Color.orange) {
                            ^