welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(getCouleurSol():Color.orange) {
	while (!estSurBiscuit()) {
		recule()
}
	prendBiscuit()
	while(!estSurBiscuit()) {
		avance()
}
	recule()
	poseBiscuit()

}
